dataset1235/2025-2/805158916/users/69248557/executions/1584167357_208040576.log
== RUN (2025-08-27 14:28:05)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = (preco * 0.15 - 1)
desconto = preco_final
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 179.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 14.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço 1.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço 0.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 29.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço 2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:47)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = 15 / 100 * preco - 1
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 179.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 14.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço 1.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço 0.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 29.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço 2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:12)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = 15 / 100 * preco - 15
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 165.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 0.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -13.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 15.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:55)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final =  preco * (1- 0.15)
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço 12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço 17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:40)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = (preco * 0.15 - 100)
desconto = preco_final
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 80.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço -85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -97.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -98.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço -70.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -97.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:29)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = (preco * 0.15 - 115)
desconto = preco_final
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 65.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço -100.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -112.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -113.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço -85.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -112.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:31:30)
-- CODE: 
preco = float(input("Informe um Preço"))
preco_final =  preco * (0.15 - 1)
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço-1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço-85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço-12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço-8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço-170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço-17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:31:50)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final =  preco * (1- 0.15)
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço 12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço 17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:00)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = 15 / 100 * preco - 150
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço -135.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -147.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -148.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço -120.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -147.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:27:47)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = (Preço * 0.15 - 1)
desconto = preco_final
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    preco_final = (Preço * 0.15 - 1)
                   ^^^^^
NameError: name 'Preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:31:35)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final =  preco * (0.15 - 1)
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço -1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço -85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço -170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:16)
-- CODE: 
preco = float(input("Informe um Preço "))
preco_final = (preco * 0.15 - 100)
desconto = preco_final
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 80.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço -85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço -97.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço -98.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço -70.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço -97.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:29:57)
-- CODE: 
preco = float(input("Informe um Preço "))
desconto = preco - 0.15
print(desconto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço 1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço 99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço 14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço 9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço 199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço 19.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:42)
-- CODE: 
preco = float(input("Informe um Preço"))
preco_final = 15 / 100 * preco - 1
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Informe um Preço179.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Informe um Preço14.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Informe um Preço1.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Informe um Preço0.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Informe um Preço29.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Informe um Preço2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
